Bug 129865 - White fill of image instead of normal image in TotD dialog with Skia
Summary: White fill of image instead of normal image in TotD dialog with Skia
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-01-07 17:03 UTC by Roman Kuznetsov
Modified: 2020-05-11 08:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot with a problem (16.17 KB, image/png)
2020-01-07 17:05 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-01-07 17:03:52 UTC
Description:
White fill of image instead of normal image in TotD dialog with Skia

Steps to Reproduce:
1. Open Calc
2. Select Help-Show Tip-of-the-Day
3. Look at white image instead normal image in the dialog

Actual Results:
White fill of image instead of normal image in TotD dialog with Skia

Expected Results:
normal image in TotD dialog with Skia


Reproducible: Always


User Profile Reset: No



Additional Info:
Версия: 6.5.0.0.alpha0+ (x64)
ID сборки: 035c7717c135c66c0ec025500b73ae9c13b7c586
Потоков ЦП: 4; ОС:Windows 10.0 Build 17763; Отрисовка ИП: Skia/Vulkan; VCL: win; Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 1 Roman Kuznetsov 2020-01-07 17:05:10 UTC
Created attachment 156992 [details]
Screenshot with a problem
Comment 2 Commit Notification 2020-01-09 14:26:03 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3aa151e4de4c02b094acb6fa8a919cc86051a6fd

fix Skia virtual device alpha blending (tdf#129865)

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2020-05-11 08:57:45 UTC
It's ok now

Verified on
Version: 7.0.0.0.alpha1
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
CPU threads: 4; OS: Linux 5.4; UI render: Skia/Raster; VCL: x11; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded