fix Skia virtual device alpha blending (tdf#129865)

The blendBitmap()/blendAlphaBitmap() stuff coming from the OpenGL code
is some undocumented crazy stuff (probably because the VirtualDevice
alpha handling itself is rather crazy). Hopefully I've finally figured
it out to work properly for Skia too. This separate alpha handling
all over the place in VCL should be just nuked.

Change-Id: I82615a9be7064e9ade00ec4970a131a80a543c14